Implemented Linux enable mode and screen size change. Working. The command emits need more works

--- a/ADT_Term_FFT/packages.config
+++ b/ADT_Term_FFT/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.5.0-beta" targetFramework="net472" />
-  <package id="AWSSDK.S3" version="3.5.0-beta" targetFramework="net472" />
-  <package id="AWSSDK.SimpleNotificationService" version="3.5.0-beta" targetFramework="net472" />
-  <package id="Extended.Wpf.Toolkit" version="3.8.1" targetFramework="net472" />
+  <package id="AWSSDK.Core" version="3.7.400.13" targetFramework="net48" />
+  <package id="AWSSDK.S3" version="3.7.402.4" targetFramework="net48" />
+  <package id="AWSSDK.SimpleNotificationService" version="3.7.400.13" targetFramework="net48" />
+  <package id="Extended.Wpf.Toolkit" version="4.6.1" targetFramework="net48" />
   <package id="JSON" version="1.0.1" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.0.0-beta3.final" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.0.0-beta3.final" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="3.0.0-beta3.final" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.NetCore.Analyzers" version="3.0.0-beta3.final" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.NetFramework.Analyzers" version="3.0.0-beta3.final" targetFramework="net472" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
